# wikicfp-scraper

./: .travis.yml  ChangeLog.md  README.md  stack.yaml  wikicfp-scraper.cabal
.github/workflows/: haskell.yml
eg/: synopsis.hs
freezes/: 20210323-ghc-8.10.4.freeze  20221125-ghc-9.2.5.freeze
src/Web/WikiCFP/: Scraper.hs
src/Web/WikiCFP/Scraper/: Scalpel.hs  Type.hs
test/Web/WikiCFP/: ScraperSpec.hs
test/data/: conf_mobisys20160620.html  conf_sigmod20160505.html  search_cloud20160505.html  search_noresult20160516.html
