name:                   wikicfp-scraper
version:                0.1.0.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               Scrape WikiCFP web site
description:            Scrape WikiCFP web site
category:               Web
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md
homepage:               https://github.com/debug-ito/wikicfp-scraper
bug-reports:            https://github.com/debug-ito/wikicfp-scraper/issues

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  -- default-extensions:   
  exposed-modules:      Web.WikiCFP.Scraper,
                        Web.WikiCFP.Scraper.Type
  -- other-modules:
  build-depends:        base,
                        text,
                        time

-- executable wikicfp-scraper
--   default-language:     Haskell2010
--   hs-source-dirs:       app
--   main-is:              Main.hs
--   ghc-options:          -Wall -fno-warn-unused-imports
--   -- other-modules:       
--   -- other-extensions:    
--   build-depends:        base

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              Spec.hs
  -- default-extensions:   
  other-modules:        Web.WikiCFP.ScraperSpec
  build-depends:        base, wikicfp-scraper,
                        hspec

source-repository head
  type:                 git
  location:             https://github.com/debug-ito/wikicfp-scraper.git
